fix dark mode (remove everything)

--- a/styles/BirthList.module.scss
+++ b/styles/BirthList.module.scss
@@ -368,19 +368,6 @@ $fuschia: #EA4C89;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
-
 $glass: rgba(255, 255, 255, 0.2);
 $glass-icon: rgba(255, 255, 255, 0.3);
 $gradient: linear-gradient(35deg, red, purple);
